--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "axios": "^0.28.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
@@ -15,6 +16,7 @@
     "ora": "^5.4.1",
     "ssh2-sftp-client": "^9.1.0",
     "vue": "^2.6.14",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
